# lib-pythonEMAIL

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
examples/: basic.py
src/email_sender/: __init__.py  attachments.py  client.py  config.py  exceptions.py  models.py
tests/: test_client.py
